{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 63,
  "lineage": "2eb5d312-059b-be8c-3087-3796433edb52",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147997118866:security-group/sg-05071b6468c13f3ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05071b6468c13f3ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.207.56.104/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250128094415408800000002",
            "name_prefix": "terraform-",
            "owner_id": "147997118866",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b36ef5a432e6b9b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dheeraj",
            "data.http.self_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147997118866:security-group/sg-0872d8ccb7c96d600",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0872d8ccb7c96d600",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250128094415407700000001",
            "name_prefix": "terraform-",
            "owner_id": "147997118866",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg"
            },
            "tags_all": {
              "Name": "private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b36ef5a432e6b9b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dheeraj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147997118866:subnet/subnet-0f43ccf45200f5037",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f43ccf45200f5037",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147997118866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-a"
            },
            "tags_all": {
              "Name": "private-subnet-a"
            },
            "vpc_id": "vpc-0b36ef5a432e6b9b5"
          },
          "dependencies": [
            "aws_vpc.dheeraj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147997118866:subnet/subnet-005a471122040971f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005a471122040971f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147997118866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-b"
            },
            "tags_all": {
              "Name": "private-subnet-b"
            },
            "vpc_id": "vpc-0b36ef5a432e6b9b5"
          },
          "dependencies": [
            "aws_vpc.dheeraj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147997118866:subnet/subnet-06a133317028ddaaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a133317028ddaaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147997118866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-0b36ef5a432e6b9b5"
          },
          "dependencies": [
            "aws_vpc.dheeraj"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dheeraj",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147997118866:vpc/vpc-0b36ef5a432e6b9b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0597d0be12e51d5e7",
            "default_route_table_id": "rtb-0eeb96aa3645593df",
            "default_security_group_id": "sg-0d629ff5eac40daa0",
            "dhcp_options_id": "dopt-0bbf937432801a480",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b36ef5a432e6b9b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eeb96aa3645593df",
            "owner_id": "147997118866",
            "tags": {
              "Name": "dheeraj-vpc"
            },
            "tags_all": {
              "Name": "dheeraj-vpc"
            }
          }
        }
      ]
    }
  ]
}